# Capstone3DModelling

./: .gitignore  CMakeLists.txt  README.md
Comparisoft/VTK/: Align.cpp  Align.h  CMakeLists.txt  Comparisoft.cxx  PointSelection.cpp  PointSelection.h  UserInfo.cpp  UserInfo.h  VSVTK.cxx  VTK.cpp  VTK.h  fileDialogue.cpp  fileDialogue.h
Comparisoft/VTK/VTK-bin/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  Comparisoft.sln  Comparisoft.vcxproj  Comparisoft.vcxproj.filters  VSVTK.sln  VSVTK.vcxproj  VSVTK.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Comparisoft/VTK/VTK-bin/Comparisoft.dir/Release/Comparisoft.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
Comparisoft/VTK/VTK-bin/Release/: output.txt
Comparisoft/VTK/VTK-bin/VSVTK.dir/Release/VSVTK.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  (+6 more)
Examples/stl-example/: CMakeLists.txt  ReadSTL.cxx  ReadSTL_BACKUP_9612.cxx  ReadSTL_BASE_9612.cxx  VTK.cpp  fileDialogue.cpp  mainwindow.cpp  mainwindow.h
Examples/stl-example/STL-bin/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  ReadSTL.sln  ReadSTL.vcxproj  ReadSTL.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
Examples/stl-example/STL-bin/Debug/: ReadSTL.ilk
Examples/stl-example/opener/Comparisoft/: Comparisoft.sln
Examples/stl-example/opener/Comparisoft/Comparisoft/: Comparisoft.vcxproj  Main.cpp
Examples/stl-example/opener/Comparisoft/Debug/: Comparisoft.ilk
(+72 files in other folders)
